<resources>
    <string name="app_name">Elderly Track</string>
    <string name="title_beacons">Beacons</string>
    <string name="title_nearby">Nearby</string>
    <string name="title_missing">Missing</string>
    <string name="title_relatives">Relatives</string>
    <string name="title_settings">Settings</string>

    <!-- Strings related to FAQ -->
    <string name="faq1">Do I need to register an account to use the app?</string>
    <string name="answer1">No, no registration is required. You can help by simply installing the app.</string>
    <string name="faq2">Why do I need to turn on Bluetooth on the phone all the time?</string>
    <string name="answer2">Beacon is a bluetooth device. The app uses bluetooth to sense nearby beacons.</string>
    <string name="faq3">Does the app drain lots of power?</string>
    <string name="answer3">The app only gets activated when there is interested beacon nearby. Turning on Bluetooth does not drain too much battery. You may check its battery usage through Settings/Battery usage.</string>
    <string name="faq4">Does the app tracks my location (privacy concern)?</string>
    <string name="answer4">Although the app will send location to server when it sense an interested beacon, it is use to indicate the location of the found beacon. The data will be sent anonymously.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Registered Caregiver Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
